Added searchbox and changed the font of the greeting

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Share&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap" rel="stylesheet">
         <title>Nowa Karta</title>
     </head>
@@ -13,6 +13,10 @@
             <p id="time"></p><br>
             <h1 id="greeting"></h1>
         </div>
+ <section class="box-4" id="box-4">
+      <form action="https://duckduckgo.com/" method="GET" target="_blank">
+        <input name="q" type="search" placeholder="Szukaj w DuckDuckGo..." />
+      </form>
         <div class="lists">
             <div class="watch">
                 <p class="list_title" id="w">oglądaj</p>
